fix jacoco reporting