@@ -93,20 +93,3 @@ bintray {
 task wrapper(type: Wrapper) {
     gradleVersion = '2.14'
 }
-
-sourceSets {
-    integTest {
-        groovy.srcDir file('src/integTest/groovy')
-        resources.srcDir file('src/integTest/resources')
-        compileClasspath = sourceSets.main.output + configurations.testRuntime
-        runtimeClasspath = output + compileClasspath
-    }
-}
-
-task integTest(type: Test) {
-    group = 'verification'
-    testClassesDir = sourceSets.integTest.output.classesDir
-    classpath = sourceSets.integTest.runtimeClasspath
-    reports.html.destination = file("$buildDir/reports/integ")
-    jvmArgs '-XX:MaxPermSize=256m'
-}
